# gnome-comiccreator

./: README  autogen.sh  configure.ac
data/: Makefile.am  application.css  org.gnome.ComicCreator.appdata.xml.in  org.gnome.ComicCreator.busname  org.gnome.ComicCreator.data.gresource.xml  org.gnome.ComicCreator.desktop.in  org.gnome.ComicCreator.gschema.xml
flatpak/: org.gnome.ComicCreator.json
po/: POTFILES.in  it.po
src/: Makefile.am  main.js  org.gnome.ComicCreator.in  org.gnome.ComicCreator.src.gresource.xml  util.js  window.js
tests/: Makefile.am  testutil.py
